<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/title_movie_description2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/sign_page_title"

        android:textColor="@color/second_blue"
        android:textSize="30sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/image_movie_bubble" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="164dp"
        android:layout_height="220dp"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_item"
                android:layout_width="166dp"
                android:layout_height="220dp"
                android:contentDescription="@string/content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/paddington"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="10dp">

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/sign_input_username_title"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:textColor="@color/second_blue"
            android:textColorHint="@color/second_blue"
            android:backgroundTint="@color/first_blue"
            android:fontFamily="@font/montserrat_light"

             />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/sign_input_password_title"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:textColor="@color/second_blue"
            android:textColorHint="@color/second_blue"
            android:backgroundTint="@color/first_blue"
            android:fontFamily="@font/montserrat_light"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_in_button"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_light"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:background="@drawable/shape_signing_activate_button"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerNowBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="22sp"
            android:text="@string/sign_up_button"
            android:textColor="@color/first_blue"
            android:fontFamily="@font/montserrat_light"
            android:textAllCaps="false"
            android:background="@drawable/shape_signing_deactivate_button" />

        <!--
        <TextView
            android:id="@+id/registerNowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register Now"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="686dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="654dp" />
        -->
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>