<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavoriteActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="9dp"
        app:cardMaxElevation="9dp"
        app:cardUseCompatPadding="false"
        app:contentPaddingBottom="0dp"

        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/movie_search"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"

            android:queryBackground="@android:color/transparent"
            android:searchIcon="@drawable/ic_search">


        </androidx.appcompat.widget.SearchView>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-2dp" />
    <ImageView
        android:id="@+id/connect"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/ic_account_true" />

    <ImageView
        android:id="@+id/favoris"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintBottom_toTopOf="@+id/fragment_favorite_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014"
        app:srcCompat="@drawable/ic_heart_filled" />

    <TextView
        android:id="@+id/textbadge2"
        android:layout_width="25sp"
        android:layout_height="25dp"
        android:layout_alignTop="@id/favoris"
        android:layout_alignRight="@id/favoris"
        android:background="@android:color/transparent"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center|center_vertical"
        android:text="@string/number_favorite"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/favoris"
        app:layout_constraintEnd_toEndOf="@+id/favoris"
        app:layout_constraintStart_toStartOf="@+id/favoris"
        app:layout_constraintTop_toTopOf="@+id/favoris"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintBottom_toTopOf="@+id/fragment_favorite_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_back_arrow" />

    <FrameLayout
        android:id="@+id/fragment_favorite_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/favorite_screen_title"
        android:textColor="@color/second_blue"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />
</androidx.constraintlayout.widget.ConstraintLayout>